--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,12 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="8e73b0">  <td>23/06/12 18:18:38</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;opschecklist.launchbrowser()[pri:0, instance:Engrow_web.opschecklist@1877ab81]">&gt;&gt;launchbrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@455538610</td>   <td></td> </tr>
-<tr bgcolor="8e73b0">  <td>23/06/12 18:18:41</td>   <td>2816</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="opschecklist.moveto_opschecklist()[pri:0, instance:Engrow_web.opschecklist@1877ab81]">moveto_opschecklist</td> 
-  <td></td>   <td></td> </tr>
-<tr bgcolor="8e73b0">  <td>23/06/12 18:18:41</td>   <td>2830</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="opschecklist.selectingchecklist()[pri:0, instance:Engrow_web.opschecklist@1877ab81]">selectingchecklist</td> 
-  <td></td>   <td></td> </tr>
-<tr bgcolor="8e73b0">  <td>23/06/12 18:18:41</td>   <td>2794</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="opschecklist.signin()[pri:-1, instance:Engrow_web.opschecklist@1877ab81]">signin</td> 
-  <td>main@455538610</td>   <td></td> </tr>
+<tr bgcolor="8e73b0">  <td>23/06/20 14:44:34</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestngEODjob.login()[pri:0, instance:encore.TestngEODjob@1877ab81]">login</td> 
+  <td>main@242355057</td>   <td></td> </tr>
+<tr bgcolor="8e73b0">  <td>23/06/20 14:44:36</td>   <td>1375</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestngEODjob.runeod()[pri:0, instance:encore.TestngEODjob@1877ab81]">runeod</td> 
+  <td>main@242355057</td>   <td></td> </tr>
+<tr bgcolor="8e73b0">  <td>23/06/20 14:44:41</td>   <td>6451</td> <td>&nbsp;</td><td title="&lt;&lt;TestngEODjob.exit()[pri:0, instance:encore.TestngEODjob@1877ab81]">&lt;&lt;exit</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@242355057</td>   <td></td> </tr>
+<tr bgcolor="8e73b0">  <td>23/06/20 14:44:23</td>   <td>-11133</td> <td>&nbsp;</td><td title="&gt;&gt;TestngEODjob.setup()[pri:0, instance:encore.TestngEODjob@1877ab81]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@242355057</td>   <td></td> </tr>
 </table>
