--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,12 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="8e73b0">  <td>23/06/20 14:44:41</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;TestngEODjob.exit()[pri:0, instance:encore.TestngEODjob@1877ab81]">&lt;&lt;exit</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@242355057</td>   <td></td> </tr>
-<tr bgcolor="8e73b0">  <td>23/06/20 14:44:34</td>   <td>-6451</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestngEODjob.login()[pri:0, instance:encore.TestngEODjob@1877ab81]">login</td> 
-  <td>main@242355057</td>   <td></td> </tr>
-<tr bgcolor="8e73b0">  <td>23/06/20 14:44:36</td>   <td>-5076</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestngEODjob.runeod()[pri:0, instance:encore.TestngEODjob@1877ab81]">runeod</td> 
-  <td>main@242355057</td>   <td></td> </tr>
-<tr bgcolor="8e73b0">  <td>23/06/20 14:44:23</td>   <td>-17584</td> <td>&nbsp;</td><td title="&gt;&gt;TestngEODjob.setup()[pri:0, instance:encore.TestngEODjob@1877ab81]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@242355057</td>   <td></td> </tr>
+<tr bgcolor="baeedf">  <td>23/11/28 11:59:27</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;Redmine_edit_effort_update.launch_browser()[pri:0, instance:Samasta.Redmine_edit_effort_update@59e5ddf]">&gt;&gt;launch_browser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1665404403</td>   <td></td> </tr>
+<tr bgcolor="baeedf">  <td>23/11/28 11:59:35</td>   <td>7992</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Redmine_edit_effort_update.update_efforts()[pri:0, instance:Samasta.Redmine_edit_effort_update@59e5ddf]">update_efforts</td> 
+  <td>main@1665404403</td>   <td></td> </tr>
 </table>
